@@ -99,6 +99,8 @@ stdout.printf("exit status: %d\n", $chan.getExitStatus());@endcode
     - implemented implicit connections for the @ref Qore::SSH2::SFTPClient class
     - implemented the @ref Qore::SSH2::SFTPClient::listFull() method
     - implemented the @ref Qore::SSH2::SSH2Base::connected() method
+    - when errors occur in the SFTPClient class, the connection is marked as closed if the connection has been terminated
+    - made cwd persistent across connections to better deal with implicit disconnections and reconnections
 
     @subsection v098 Version 0.9.8
     - default timeout of 60 seconds added to connect methods to avoid hanging connections indefinitely
